--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -1,5 +1,5 @@
 {
-	"extends": "ckeditor5/tsconfig.json",
+	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"declaration": true,
 		"emitDeclarationOnly": true,
@@ -8,6 +8,6 @@
 	},
 	"include": [
 		"src",
-		"../../typings"
+		"./typings"
 	]
 }
