--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@ckeditor/ckeditor5-paragraph": "^37.0.1",
     "@ckeditor/ckeditor5-paste-from-office": "^37.0.1",
     "@ckeditor/ckeditor5-table": "^37.0.1",
-    "@ckeditor/ckeditor5-typing": "^37.0.1"
+    "@ckeditor/ckeditor5-typing": "^37.0.1",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^37.0.1",
