--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@ckeditor/ckeditor5-editor-inline": "^37.0.1",
     "@ckeditor/ckeditor5-essentials": "^37.0.1",
     "@ckeditor/ckeditor5-heading": "^37.0.1",
+    "@ckeditor/ckeditor5-highlight": "^37.0.1",
     "@ckeditor/ckeditor5-image": "^37.0.1",
     "@ckeditor/ckeditor5-indent": "^37.0.1",
     "@ckeditor/ckeditor5-link": "^37.0.1",
     "@ckeditor/ckeditor5-list": "^37.0.1",
     "@ckeditor/ckeditor5-media-embed": "^37.0.1",
+    "@ckeditor/ckeditor5-mention": "^37.0.1",
     "@ckeditor/ckeditor5-paragraph": "^37.0.1",
     "@ckeditor/ckeditor5-paste-from-office": "^37.0.1",
     "@ckeditor/ckeditor5-table": "^37.0.1",
