--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ckeditor/ckeditor5-mention": "^37.0.1",
     "@ckeditor/ckeditor5-paragraph": "^37.0.1",
     "@ckeditor/ckeditor5-paste-from-office": "^37.0.1",
+    "@ckeditor/ckeditor5-special-characters": "^37.0.1",
     "@ckeditor/ckeditor5-table": "^37.0.1",
     "@ckeditor/ckeditor5-typing": "^37.0.1",
     "rxjs": "^7.8.0"
