--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@ckeditor/ckeditor5-special-characters": "^37.0.1",
     "@ckeditor/ckeditor5-table": "^37.0.1",
     "@ckeditor/ckeditor5-typing": "^37.0.1",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "deepl": "^1.0.13"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "^37.0.1",
